RESOLVED FIXED170297
YouTube sometimes does not respect "user gesture" restriction for videos
https://bugs.webkit.org/show_bug.cgi?id=170297
Summary YouTube sometimes does not respect "user gesture" restriction for videos
Matt Rajca
Reported 2017-03-30 13:15:38 PDT
I discovered a code path in WebKit that does not honor the “user gesture” requirement even though we have a restriction in place. This occurs on YouTube, which happens to use Media Streams. <rdar://problem/31137640>
Attachments
Patch (2.00 KB, patch)
2017-03-30 13:21 PDT, Matt Rajca
eric.carlson: review+
Matt Rajca
Comment 1 2017-03-30 13:21:54 PDT
Eric Carlson
Comment 2 2017-03-30 13:32:22 PDT
Comment on attachment 305889 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=305889&action=review As discussed over IRC, you should be able to make a layout test for this. > Source/WebCore/ChangeLog:7 > + even though we have a restriction in place. When using Media Streams, which YouTube does, we transition I think you mean "MSE", not "Media Streams".
Matt Rajca
Comment 3 2017-03-30 16:32:16 PDT
(In reply to Eric Carlson from comment #2) > Comment on attachment 305889 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=305889&action=review > > As discussed over IRC, you should be able to make a layout test for this. Will do. > > > Source/WebCore/ChangeLog:7 > > + even though we have a restriction in place. When using Media Streams, which YouTube does, we transition > > I think you mean "MSE", not "Media Streams". Yup, updated the ChangeLog.
Note You need to log in before you can comment on or make changes to this bug.